# oadr-cpep

./: .gitignore  Dockerfile  README.md  oadr-cpep.yml  pyproject.toml
.github/workflows/: docker-build.yml  docs.yml
data/: SDY1737_arm_2_subject.txt  SDY1737_arm_or_cohort.txt  SDY1737_cpeptide_auc_tidy.csv  SDY1737_tidy.csv  SDY524_arm_2_subject.txt  SDY524_arm_or_cohort.txt  SDY524_cpeptide_auc_tidy.csv  SDY524_tidy.csv  SDY569_arm_2_subject.txt  SDY569_arm_or_cohort.txt  SDY569_cpeptide_auc_tidy.csv  SDY569_tidy.csv  SDY797_arm_2_subject.txt  SDY797_arm_or_cohort.txt  SDY797_cpeptide_auc_tidy.csv  SDY797_tidy.csv  aa_1737.csv  aa_524.csv  aa_569.csv  demo_1737.csv  demo_524.csv  demo_569.csv
docs/source/: conf.py  index.rst
src/oadr-cpep/: cli.py  oadr_data.py
src/oadr_cpep/: __init__.py  aggregate.py  apply.py  cli.py  common_utils.py  fit.py  logging_config.py  oadr_data.py  plot.py  select.py  site.py
tests/: test_cli.py
